@@ -6,14 +6,19 @@
       <separator/>
       <menuitem action="Close"/>
     </menu>
+    <menu action="EditMenu">
+      <menuitem action="Cut"/>
+	  <menuitem action="Copy"/>
+	  <menuitem action="Paste"/>
+	  <separator/>
+      <menuitem action="DeleteNodes"/>
+      <menuitem action="ViewExtend"/>
+    </menu>
     <menu action="ModeMenu">
       <menuitem action="Edit"/>
       <menuitem action="Move"/>
       <menuitem action="AddImage"/>
       <menuitem action="Drawing"/>
-      <separator/>
-      <menuitem action="DeleteNodes"/>
-      <menuitem action="ViewExtend"/>
     </menu>
     <menu action="HelpMenu">
       <menuitem action="About"/>
